--- a/final.html
+++ b/final.html
@@ -8,11 +8,11 @@
     <link href="final.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- AOS (Animate On Scroll) Library -->
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 
 
-    <!-- Swiper (for sliders) -->
+
     <link href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 
@@ -828,7 +828,7 @@
                             <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
                         </div>
                     </div>
-                </div><!-- End Team Member -->
+                </div>
 
                 <div class="col-lg-3 col-md-6 d-flex align-items-stretch aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
                     <div class="team-member">
@@ -982,11 +982,11 @@
 
 <section id="contact" class="contact section">
 
-    <!-- Section Title -->
+
     <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Contact Us</p>
-    </div><!-- End Section Title -->
+    </div>
 
     <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
 
@@ -1002,7 +1002,7 @@
                             <p>A108 Adam Street</p>
                             <p>New York, NY 535022</p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="300">
@@ -1011,7 +1011,7 @@
                             <p>+1 5589 55488 55</p>
                             <p>+1 6678 254445 41</p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="400">
@@ -1020,7 +1020,7 @@
                             <p>info@example.com</p>
                             <p>contact@example.com</p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="500">
@@ -1029,7 +1029,7 @@
                             <p>Monday - Friday</p>
                             <p>9:00AM - 05:00PM</p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                 </div>
 
@@ -1065,7 +1065,7 @@
 
                     </div>
                 </form>
-            </div><!-- End Contact Form -->
+            </div>
 
         </div>
 
@@ -1080,11 +1080,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-<!-- Isotope Layout Library -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
 
-<!-- GLightbox (for image lightboxes) -->
+
 
 <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 <script src="final.js"></script>
